--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: jekyll-theme-cayman
-title: AgriGenomics
+
+title: Agricultural Genomics and Bioinformatics
+subtitle: Future of Food Security in Ghana
