--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 
-title: Agricultural Genomics and Bioinformatics
-subtitle: Future of Food Security in Ghana
+title: Discussion on Agricultural Genomics and Bioinformatics (2020)
+description: Future of Food Security in Ghana
