--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 
-title: GBTI Virtual Discussion Forum - Winter 2020
-description: Agricultural Genomics and Bioinformatics: Future of Food Security in Ghana
+title: 'GBTI Virtual Discussion Forum - Winter 2020'
+description: 'Agricultural Genomics and Bioinformatics: Future of Food Security in Ghana'
