--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-cayman
+github:
+  is_project_page: false
 
 title: 'GBTI Virtual Discussion Forum - Winter 2020'
 description: 'Agricultural Genomics and Bioinformatics: Future of Food Security in Ghana'
