--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ github:
   is_project_page: false
 
 title: 'GBTI Virtual Discussion Forum - Winter 2020'
-description: 'Agricultural Genomics and Bioinformatics: Future of Food Security in Ghana'
+description: 'Agricultural Genomics and Bioinformatics: Future of Food Security in Ghana\n Does it work?'
